--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Todo este css ha ido quedando en deshuso por las complicaciones que genera al momento de estilizar varios componentes */
