--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
    text-align: center;
+   background-image: url('./assets/bg.jpeg');
+   background-position: center;
+   background-size:cover;
+   background-repeat: no-repeat;
+   background-color: transparent;
+   background-attachment: fixed;
+}
+
+.Transparent-Img{
+   background-color: rgba(0, 0, 0, 0.733) ;
+   background-attachment: fixed;
 }
